--- a/style.css
+++ b/style.css
@@ -5,13 +5,23 @@ body{
 
 section{
     height: 500px;
+    padding-bottom: 150px;
 }
 
 h1{
 font-size: 50px;
 }
 
-.name{
+.block-head{
+    font-size: 40px;
+    color: rgb(109, 13, 218);
+}
+
+p{
+    color: dimgray;
+}
+
+.orange{
     color: coral;
 }
 
@@ -33,9 +43,66 @@ font-size: 50px;
 
 .button{
     text-decoration: none;
-    background-image: linear-gradient(45deg, rgb(112, 131, 214), rgb(47, 8, 190));
+    background-image: linear-gradient(45deg, rgb(192, 231, 101), rgb(221, 16, 129));
     color: #fff;
     font-weight: 700;
     padding: 10px 20px;
     border-radius: 5px;
+    margin-top: 10px;
+}
+
+.dream{
+    background-image: url(../images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+
+.button-fb{
+    text-decoration: none;
+    background-image: linear-gradient(45deg, rgb(142, 152, 196), rgb(35, 32, 177));
+    color: #fff;
+    font-weight: 700;
+    padding: 10px 20px;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+
+.block-head2{
+    font-size: 40px;
+    color: rgb(5, 134, 5);
+}
+.experience{
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 10px;
+    height: 80%;
+    background: #fff;
+}
+.exp-area{
+    background-image: url(../images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, rgb(226, 168, 6), rgb(24, 165, 94));
+    border-image-slice: 1;
+}
+
+#junior{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, rgb(11, 43, 226), rgb(238, 6, 141));
+    border-image-slice: 1;
+}
+
+#main-footer{
+    text-align: center;
+    background-image: linear-gradient(180deg, rgb(103, 235, 16), rgb(171, 46, 243));
+    background-position: center;
+    padding: 2px;
+    margin-bottom: 20px;
+}
+#main-footer p{
+    color: #fff;
+    font-size: 12px;
 }
