--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
 
 section{
     height: 500px;
-    padding-bottom: 150px;
+    padding-bottom: 70px;
 }
 
 h1{
@@ -48,7 +48,10 @@ p{
     font-weight: 700;
     padding: 10px 20px;
     border-radius: 5px;
-    margin-top: 10px;
+    margin-top: 40px;
+}
+a:hover{
+    background-image: linear-gradient(45deg, rgb(230, 182, 52), rgb(17, 218, 33));
 }
 
 .dream{
@@ -70,11 +73,13 @@ p{
 .block-head2{
     font-size: 40px;
     color: rgb(5, 134, 5);
+    margin-left: 30px;
+    padding-bottom: 40px;
 }
 .experience{
     box-shadow: 10px 10px 40px gray;
     border-radius: 10px;
-    height: 80%;
+    height: 70%;
     background: #fff;
 }
 .exp-area{
